--- a/style.css
+++ b/style.css
@@ -39,9 +39,8 @@ a {color: ;}
 					height: auto;
 					}
 
-				h3 {
+				iframe {
 					display: block;
 					margin-right:2%;
 					float: right;
-					padding-left:550px;
 					}
