--- a/style.css
+++ b/style.css
@@ -1,37 +1,40 @@
 body {
-	background:#2d2f2f;
-	font-size:30px;
-	line-height: 1.0em;
+	background:#192924;
+	font-size:20px;
+	line-height: 1,0em;
 	color:#d9dede;
-	font-family: Century Gothic;
+	font-family: Eurostile;	
 	}
 
-	h1 { font-size:50px;
+	h1 { font-size:30px;
 		line-height: 1.0em;
 		}
 
 	p, h2 { font-size: 17px;
-		line-height: 1.0em;
+		line-height: 1,0em;
 		}
 	
 	a { color: #769e9c;
 		}
 		
-	ul, h2 {margin-top: 20px; 
-		margin-bottom:20px;
+	ul, h2 {margin-bottom:17px;
 		font-size: 17px;
+		list-style-type: none;
+
 		}
 
-		h2 {
-		font-size: 20px;
+	ol { margin-bottom:15px;
+		font-size: 17px;
+		list-style-type: square;
+		font-family: Eurostile;
 		}
 
-	ol { margin-bottom:20px;
-		font-size: 13px;
+	h3 {margin-bottom:10px; 
+		font-size: 15px;
 		}
 
 a {color: ;}
-	h1, h2, p, ul, ol { padding-left:50px;
+	h1, h2, p, ul, ol { padding-left:30px;
 
 		}
 		#main {		}
