--- a/style1.css
+++ b/style1.css
@@ -3,6 +3,9 @@ body {
 	font-size:25px;
 	line-height: 1,0em;
 	color:#d9dede;
+	.an_account_join_1{
+font-family:"Calibri, sans-serif";
+}
 	}
 
 	h1 { font-size:30px;
